--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -23,3 +23,6 @@ en:
       name_slug_required: "Name and slug are required"
       label: "Select Category Language"
       confirm_delete: "Are you sure you want to delete the language %{name}?"
+      alternates_label: "Select Categories to connect with default language"
+      default_label: "Select Default Language Category for connections"
+      confirm_language_change: "Are you sure you want to change the language to %{name}? All language connections will be reset."
